# minidsp-rs

./: Cross.toml  README.md  flake.nix  package.nix
.cargo/: config.toml
.github/workflows/: push-test.yml  release-build.yml
daemon/: Cargo.toml
daemon/src/: device_manager.rs
daemon/src/discovery/: tasks.rs
daemon/src/http/: mod.rs
devtools/: Cargo.toml
devtools/src/: main.rs
devtools/src/codegen/: mod.rs  spec.rs
devtools/src/codegen/flex/: mod.rs
devtools/src/codegen/flexht/: mod.rs
devtools/src/codegen/flexhtx/: config.xml  mod.rs
minidsp/: Cargo.toml
minidsp/src/: builder.rs
minidsp/src/formats/: wav.rs
minidsp/src/transport/: mod.rs
minidsp/src/transport/hid/: discover.rs  mod.rs  stream.rs
protocol/: Cargo.toml
protocol/src/: source.rs
protocol/src/device/: flexhtx.rs  mod.rs  probe.rs
protocol/src/util/: try_buf.rs
scripts/: Dockerfile.aarch64  Dockerfile.armv7  Dockerfile.musl  Dockerfile.rpi  Dockerfile.rpi_64  Dockerfile.zigaarch64  Dockerfile.zigarm  build-pi-arm64.sh  build-pi-armv6hf.sh  build_pi-armv7hf.sh
