[package]
authors = ["Mathieu Rene <mathieu.rene@gmail.com>"]
edition = "2021"
name = "minidsp-daemon"
version = "0.1.9"
license = "Apache-2.0"
description = "A control interface for some MiniDSP products"
repository = "https://github.com/mrene/minidsp-rs"

[[bin]]
name = "minidspd"
path = "src/main.rs"

[features]
default = ["serde", "strum", "schemars"]

[dependencies]
anyhow = "1.0.91"
bytes = "1.8.0"
clap = "4.5.20"
confy = "0.5.1"
env_logger = "0.10.2"
futures = "0.3.31"
futures-sink = "0.3.31"
futures-util = "0.3.31"
hyper = "0.14.31"
hyper-tungstenite = "0.11.1"
lazy_static = "1.5.0"
log = "0.4.22"
minidsp = { version="0.1.4", path="../minidsp" }
okapi = "0.7.0"
once_cell = "1.20.2"
routerify = "3.0.0"
routerify-query = "3.0.0"
schemars = { version = "0.8.21", optional = true }
serde = { version = "1.0.213", features = ["derive"], optional = true }
serde_json = "1.0.132"
strum = { version = "0.25.0", features = ["derive"], optional = true }
termcolor = "1.4.1"
thiserror = "1.0.65"
tokio-stream = { version = "0.1.16", features = ["sync"] }
url2 = "0.0.6"

[dependencies.tokio]
features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]
version = "1.41.0"

[dependencies.tokio-util]
features = ["net", "codec", "io"]
version = "0.7.12"

[target.'cfg(target_family="unix")'.dependencies]
hyperlocal = "0.8.0"
routerify-unixsocket = "3.0.0"
